Move SeamAutowire tests to unit tests.
Cleanup unnecessary files, classes, etc.